tests/programs/type-errors/impl_bad_cast.rice
interface Bar {
  fn bloop(Self, int) -> int;
}

struct Foo(int);

fn main() { 
  (new Foo(0)) as @Bar; ()
}